azure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boring-paper-co
  labels:
    app: boring-paper-co
